--- a/styles/custom.css
+++ b/styles/custom.css
@@ -2,8 +2,44 @@
     font-size: 52px;
     font-weight: 500;
     line-height: 120%;
-    padding-bottom: 60px;
+    margin-bottom: 60px;
     text-transform: uppercase;
+}
+
+@media (width < 1281px) {
+    .block-title {
+        font-size: 42px;
+        margin-bottom: 55px;
+    }
+}
+@media (width < 992px) {
+    .block-title {
+        font-size: 35px;
+        margin-bottom: 50px;
+    }
+}
+@media (width < 769px) {
+    .block-title {
+        font-size: 46px;
+    }
+}
+@media (width < 651px) {
+    .block-title {
+        font-size: 38px;
+        margin-bottom: 48px;
+    }
+}
+@media (width < 551px) {
+    .block-title {
+        font-size: 35px;
+        margin-bottom: 45px;
+    }
+}
+
+@media (width < 431px) {
+    .block-title {
+        font-size: 32px;
+    }
 }
 
 
@@ -17,6 +53,8 @@
     position: absolute;
     top: -67px;
     right: 0;
+    display: flex;
+    gap: 16px;
 }
 
 .swiper-button-prev, .swiper-button-next {
