--- a/styles/components/form.css
+++ b/styles/components/form.css
@@ -22,3 +22,35 @@
     padding-top: 18px;
     padding-bottom: 18px;
 }
+
+@media (width < 1281px) {
+
+}
+
+@media (width < 992px) {
+    .feedback-form {
+        padding: 25px 30px 30px 30px;
+    }
+}
+
+@media (width < 769px) {
+    .feedback-form {
+        padding: 25px 30px 30px 30px;
+    }
+}
+
+@media (width < 651px) {
+    
+}
+
+@media (width < 551px) {
+    .feedback-form {
+        padding: 25px 25px 30px 25px;
+    }
+}
+
+@media (width < 431px) {
+    .feedback-form {
+        padding: 20px 20px 30px 20px;
+    }
+}
