--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -1,13 +1,19 @@
 .header {
     padding: 59px 0px;
-    display: flex;
-    align-items: center;
 }
 .header__container {
+}
+.header__desktop {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+.header__mobile {
+    display: none;
+}
+.header__left {
 }
 .header__logo-link {
     display: inline-block;
@@ -15,6 +21,11 @@
 }
 .header__logo-img {
     height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+.pre-mobile-menu {
+    display: none;
 }
 .header__menu {
     padding: 14px 28px;
@@ -27,7 +38,7 @@
 .header__menu-item {
 }
 .header__menu-item:not(:last-child) {
-    margin-right: 24px;
+    margin-right: 20px;
 }
 .header__menu-link {
     font-size: 16px;
@@ -48,7 +59,7 @@
 }
 .header__buttons {
     display: flex;
-    gap: 15px;
+    gap: 8px;
 }
 .header__button {
     font-family: 'Montserrat';
@@ -60,4 +71,117 @@
     font-family: 'Montserrat';
     font-weight: 500;
     color: #030303;
+}
+
+@media (width < 1318px) {
+    .header {
+        padding: 45px 0px;
+    }
+    .header__left {
+        display: flex;
+        align-items: center;
+        gap: 50px;
+    }
+    .header__menu {
+        display: none;
+    }
+    .pre-mobile-menu {
+        display: block;
+    }
+    .header__pre-mobile-menu {
+        width: 36px;
+    }
+    .pre-mobile-menu__dropdown {
+    }
+    .pre-mobile-menu__dropdown.show {
+        display: flex;
+        flex-direction: column;
+    }
+    .burger-button {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        max-width: 36px;
+        width: 100%;
+        height: 26px;
+    }
+    .burger-button span {
+        width: 100%;
+        height: 2px;
+        background-color: #4E6932;
+    }
+    .burger-button:hover {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        max-width: 36px;
+        width: 100%;
+        height: 26px;
+    }
+    .pre-mobile-menu__dropdown-menu {
+        width: 215px;
+        inset: -30px auto auto 61px !important;
+        border: 1px solid #4E6932;
+        padding: 0px;
+        border-radius: 11px;
+        overflow: hidden;
+    }
+    .pre-mobile-menu__dropdown-item {
+        font-size: 18px;
+        line-height: 100%;
+        color: #030303!important;
+        padding: 12px 18px;
+    }
+    .pre-mobile-menu__dropdown-item:hover, .pre-mobile-menu__dropdown-item:active, .pre-mobile-menu__dropdown-item:focus {
+        color: #4E6932;
+        background: #C7D8A5;
+    }
+}
+
+@media (width <= 768px) {
+    .header {
+        padding: 23px 0px;
+        position: fixed;
+        width: 100%;
+        background-color: #F8F8F8;
+        z-index: 1000;
+    }
+    .header__desktop {
+        display: none;
+    }
+    .header__mobile {
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+    }
+    .header__mobile-top {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .mobile-menu {
+    }
+
+    .header__mobile-menu {
+        width: 36px;
+        height: 24px;
+    }
+}
+@media (width <= 600px) {
+    .header__logo-link {
+        max-width: 52px;
+    }
+    .header__link-phone {
+        font-size: 15px;
+        padding: 10px 18px;
+    }
+}
+@media (width <= 430px) {
+    .header__logo-link {
+        max-width: 47px;
+    }
+    .header__link-phone {
+        font-size: 14px;
+        padding: 8px 10px;
+    }
 }
