--- a/styles/reset.css
+++ b/styles/reset.css
@@ -100,10 +100,15 @@ button {
     cursor: pointer;
 }
 
+button {
+    background: transparent;
+}
+
 .wrapper {
     height: 100%;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 .my-container {
