--- a/styles/UI/button.css
+++ b/styles/UI/button.css
@@ -2,14 +2,46 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 15px 25.5px;
+    padding: 15px 10px;
     font-family: 'Jost';
     font-size: 16px;
     font-weight: 600;
     line-height: 100%;
     color: #FFF;
     text-transform: uppercase;
-    background-color: #90AB7B;
+    background-color: #4E6932;
+}
+
+@media (width < 1341px) {
+
+}
+@media (width < 1281px) {
+    .my-button {
+        padding: 16px 10px;
+    }
+}
+@media (width < 992px) {
+
+}
+@media (width < 903px) {
+
+}
+@media (width < 769px) {
+    .my-button {
+        padding: 17px 10px;
+    }
+}
+@media (width < 651px) {
+
+}
+@media (width < 551px) {
+    .my-button {
+        padding: 18px 10px;
+    }
+}
+
+@media (width < 431px) {
+
 }
 
 
@@ -45,7 +77,7 @@
 
 /* СОСТОЯНИЯ */
 .my-button:hover {
-    background-color: #4E6932;
+    background-color: #90AB7B;
 }
 .my-button:hover.my-button_lightGreen {
     border: 1px solid #b4c492;
